# tomboy-emu

./: .gitignore  01-special-results.txt  Cargo.toml  README.md  isitok.txt  opcodes_converter.js  test.sh
src/: bus.rs  cartrdige.rs  definitions.rs  lib.rs  main.rs  mmu.rs  timer.rs
src/bus/: dma.rs  lcd.rs  mod.rs  timer.rs
src/cpu/: addressing.rs  decode.rs  decoding.rs  instructions.rs  mod.rs  operands.rs  optable.json  optable.rs  registers.rs
src/ppu/: fifo.rs  mod.rs  tiles.rs
tests/: gb-doctor-tests.sh  gb-tests.sh  tests.rs
tools/: codes.txt  converter.js  inst_codes.js  opcodes_converter.js  optable.txt
utils/: codes_per_inst.js  converter.js  cycles_per_inst.js
