[package]
name = "tomboy-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
enum-primitive-derive = "0.2.2"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
num = "0.4.1"
num-traits = "0.2.17"
